# ed25519

./: .clang-format  CMakeLists.txt  ed25519.pc.in  test.c
include/: ed25519.h
src/: seed.c
